Fix files broken in merge

--- a/public/stylesheets/template_routes.css
+++ b/public/stylesheets/template_routes.css
@@ -3,6 +3,8 @@ html, body {
   font-family: Montserrat;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
 /*  background: #ffffee;*/
 }
 
@@ -223,4 +225,5 @@ html, body {
 #_topFrame {
   margin: 0;
   padding-top: 40px;
+  border: 0;
 }
